# tinybrain

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  README.md  appveyor.yml  automated_test.py  build_linux.sh  manylinux1.Dockerfile  manylinux2010.Dockerfile  manylinux2014.Dockerfile  perf.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build_wheel.yml  run_tests.yml
tinybrain/: __init__.py  accelerated.cpp  accelerated.hpp  accelerated.pyx  downsample.py  network_sort.hpp
