[metadata]
name = tinybrain
url = https://github.com/seung-lab/tinybrain/
summary = Image pyramid generation specialized for connectomics data types and procedures.
description-file = README.md
author = William Silversmith
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/tinybrain/
license = LICENSE
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering  

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = tinybrain
